Add ICO favicon and PDF metadata

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -28,9 +28,11 @@ a {
   margin-bottom: 0;
 }
 
-.disclaimer,
-.fanclub {
-  text-align: justify;
+@media (min-width: 500px) {
+  .disclaimer,
+  .fanclub {
+    text-align: justify;
+  }
 }
 
 .directory-title,
