Improve the quality of the website

--- a/templates/index.html
+++ b/templates/index.html
@@ -94,7 +94,7 @@
           zato jih uporabljajte na lastno odgovornost. Namenjeni so osebni nekomercialni uporabi.</p>
 
         <p class="fanclub">Priporočam tudi ogled in članstvo v <a href="https://progklub.4a.si/pretnar/"
-          target="_blank">Klubu oboževalk Matije Pretnarja</a>.</p>
+          target="_blank">Klubu oboževalk <span class="hearts">Matije Pretnarja</span></a>.</p>
 
         <p class="author">Avtor: <span itemprop="author">{{ meta.author }}</span></p>
       </div>
