--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -106,3 +106,21 @@ a {
     cursor: url("/img/cursors/cursor-arrow-3.gif") 24 24, auto;
   }
 }
+
+.hearts,
+.hearts > * {
+  animation: hearts 400ms infinite;
+  cursor: url("/img/cursors/cursor-hearts-0.gif") 24 24, auto;
+}
+
+@keyframes hearts {
+  0% {
+    cursor: url("/img/cursors/cursor-hearts-0.gif") 24 24, auto;
+  }
+  33% {
+    cursor: url("/img/cursors/cursor-hearts-1.gif") 24 24, auto;
+  }
+  66% {
+    cursor: url("/img/cursors/cursor-hearts-2.gif") 24 24, auto;
+  }
+}
