Add another link to website

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -47,6 +47,10 @@ a {
   padding-bottom: 0.7rem;
 }
 
+.directory-title {
+  margin-top: 12px;
+}
+
 .directory-title,
 .file-title {
   font-weight: bold;
